[gd_scene load_steps=98 format=3 uid="uid://batngdfpuvufm"]

[ext_resource type="Script" uid="uid://dhwxukmxuqfm8" path="res://src/character/character.gd" id="1_aakvx"]
[ext_resource type="Script" uid="uid://bei1wwsixdmk4" path="res://src/character/fsm/fsm_character.gd" id="2_6mb4q"]
[ext_resource type="Script" uid="uid://cy3054qggro0q" path="res://src/fsm/_fsm.gd" id="2_frm2c"]
[ext_resource type="Script" uid="uid://bvbgyajrvqql4" path="res://src/character/fsm/state/idle.gd" id="3_k8eue"]
[ext_resource type="Script" uid="uid://dt4jnar8yx6id" path="res://src/character/fsm/state/move_npc.gd" id="4_fi36g"]
[ext_resource type="Script" uid="uid://c4fkfl7f2uyuk" path="res://src/character/fsm/state/move.gd" id="4_m366t"]
[ext_resource type="Script" uid="uid://ccerxkr4dln24" path="res://src/character/fsm/state/dead.gd" id="4_tntuy"]
[ext_resource type="Script" uid="uid://brsaqvqhir8tp" path="res://src/character/fsm/state/melee.gd" id="5_tntuy"]
[ext_resource type="Script" uid="uid://cjflggqw8u031" path="res://src/character/fsm/state/move_player.gd" id="6_8cpw0"]
[ext_resource type="Script" uid="uid://cirvakft87x8y" path="res://src/character/fsm/state/shoot.gd" id="6_56uj1"]
[ext_resource type="Script" uid="uid://b6e251pspi57y" path="res://src/character/fsm/state/hurt.gd" id="10_38jpj"]
[ext_resource type="Script" uid="uid://bx1jq2ldeko8j" path="res://src/character/behavior/rest.gd" id="11_6hfyb"]
[ext_resource type="Script" uid="uid://bu6jpd5jlcvgh" path="res://src/character/behavior/attack.gd" id="12_7l6p6"]
[ext_resource type="Script" uid="uid://b8nc2aejkl0m6" path="res://src/character/behavior/move_to.gd" id="13_7wjtf"]
[ext_resource type="AnimationLibrary" uid="uid://dwob6vcdd1ph8" path="res://resource/animation/Alchemist.tres" id="16_0melp"]
[ext_resource type="AnimationLibrary" uid="uid://54ry30p2ubrx" path="res://resource/animation/Badger.tres" id="17_0ekrb"]
[ext_resource type="AnimationLibrary" uid="uid://xjj603rlrwm3" path="res://resource/animation/Barbarian.tres" id="18_32hfe"]
[ext_resource type="AnimationLibrary" uid="uid://bl885wh78iala" path="res://resource/animation/Bard.tres" id="19_dmj6x"]
[ext_resource type="AnimationLibrary" uid="uid://cpew4ioy1rqrg" path="res://resource/animation/Bat.tres" id="20_wieq1"]
[ext_resource type="AnimationLibrary" uid="uid://d20wokf2apufc" path="res://resource/animation/Blacksmith.tres" id="21_0bjdw"]
[ext_resource type="AnimationLibrary" uid="uid://kaasmjn5wa2y" path="res://resource/animation/Blue_Mother_Slime.tres" id="22_x15fd"]
[ext_resource type="AnimationLibrary" uid="uid://b1jfu6mbhrbyt" path="res://resource/animation/Blue_Slime.tres" id="23_gtk46"]
[ext_resource type="AnimationLibrary" uid="uid://bhykyeoc56lpr" path="res://resource/animation/Butcher.tres" id="24_880r3"]
[ext_resource type="AnimationLibrary" uid="uid://cakm4ykpgpxmq" path="res://resource/animation/Camel.tres" id="25_ytjbd"]
[ext_resource type="AnimationLibrary" uid="uid://b8n3p6j4vrn5l" path="res://resource/animation/Carpenter.tres" id="26_ppwiq"]
[ext_resource type="AnimationLibrary" uid="uid://0wiwfyqmeljo" path="res://resource/animation/Cat.tres" id="27_o072j"]
[ext_resource type="AnimationLibrary" uid="uid://ceth23r35b7nb" path="res://resource/animation/Centaur.tres" id="28_imcyw"]
[ext_resource type="AnimationLibrary" uid="uid://dgd3n45ggr5lp" path="res://resource/animation/Cleric.tres" id="29_fcqus"]
[ext_resource type="AnimationLibrary" uid="uid://dnruxs8tmbg3o" path="res://resource/animation/Cooker.tres" id="30_41ik1"]
[ext_resource type="AnimationLibrary" uid="uid://b7sroykpm0rik" path="res://resource/animation/Cyclop.tres" id="31_vmj8q"]
[ext_resource type="AnimationLibrary" uid="uid://d1ib86we01ivr" path="res://resource/animation/Dog.tres" id="32_037yu"]
[ext_resource type="AnimationLibrary" uid="uid://co8bemmfgmejq" path="res://resource/animation/Druid.tres" id="33_pdq4m"]
[ext_resource type="AnimationLibrary" uid="uid://diux0r3bd8iue" path="res://resource/animation/Dyer.tres" id="34_781ol"]
[ext_resource type="AnimationLibrary" uid="uid://vgl3muk4gm7f" path="res://resource/animation/Elephant.tres" id="35_jbruh"]
[ext_resource type="AnimationLibrary" uid="uid://coirqtbwypc8v" path="res://resource/animation/Evil_Snowman.tres" id="36_1455u"]
[ext_resource type="AnimationLibrary" uid="uid://bohowxjrtmnfb" path="res://resource/animation/Fighter.tres" id="37_2ko0t"]
[ext_resource type="AnimationLibrary" uid="uid://duw6ymucsnnq3" path="res://resource/animation/Frog.tres" id="38_qkaqj"]
[ext_resource type="AnimationLibrary" uid="uid://yy5pb05da0g6" path="res://resource/animation/Furrier.tres" id="39_ud4bo"]
[ext_resource type="AnimationLibrary" uid="uid://cbovo4usl6ig8" path="res://resource/animation/Ghost.tres" id="40_10jvr"]
[ext_resource type="AnimationLibrary" uid="uid://byxw7l72sed4r" path="res://resource/animation/GiantSnail.tres" id="41_dj3ym"]
[ext_resource type="AnimationLibrary" uid="uid://clqhvfq84nemx" path="res://resource/animation/Goat.tres" id="42_21bgx"]
[ext_resource type="AnimationLibrary" uid="uid://ckkr7tt84g68w" path="res://resource/animation/Green_Mother_Slime.tres" id="43_4ff8c"]
[ext_resource type="AnimationLibrary" uid="uid://cb473bwllwkd2" path="res://resource/animation/Green_Slime.tres" id="44_cc35g"]
[ext_resource type="AnimationLibrary" uid="uid://cvyoyye88s6ej" path="res://resource/animation/Headless_Skeleton.tres" id="45_oy2vi"]
[ext_resource type="AnimationLibrary" uid="uid://c1youj1b3enti" path="res://resource/animation/Hedgehog.tres" id="46_2p33r"]
[ext_resource type="AnimationLibrary" uid="uid://b1etl5wf03uki" path="res://resource/animation/Hippo.tres" id="47_jyoqh"]
[ext_resource type="AnimationLibrary" uid="uid://djxprmli7sy5d" path="res://resource/animation/Horse.tres" id="48_bhhjg"]
[ext_resource type="AnimationLibrary" uid="uid://ja7sa1gc3oaj" path="res://resource/animation/Hyena.tres" id="49_y05b2"]
[ext_resource type="AnimationLibrary" uid="uid://cqnfln77b85lq" path="res://resource/animation/Jeweller.tres" id="50_4q184"]
[ext_resource type="AnimationLibrary" uid="uid://bcuno0qds3o8o" path="res://resource/animation/Jumping_Skull.tres" id="51_snbta"]
[ext_resource type="AnimationLibrary" uid="uid://b71onlky6jb05" path="res://resource/animation/Kangaroo.tres" id="52_cctdb"]
[ext_resource type="AnimationLibrary" uid="uid://db2mle1jthmju" path="res://resource/animation/Lion.tres" id="53_28wxm"]
[ext_resource type="AnimationLibrary" uid="uid://cebbdxlymaoxv" path="res://resource/animation/Lioness.tres" id="54_nykuy"]
[ext_resource type="AnimationLibrary" uid="uid://edbudwtd0a1m" path="res://resource/animation/Minotaur.tres" id="55_u2trn"]
[ext_resource type="AnimationLibrary" uid="uid://bbtd7ocguitem" path="res://resource/animation/Moose.tres" id="56_3w2g2"]
[ext_resource type="AnimationLibrary" uid="uid://cdeg34j4oo0ge" path="res://resource/animation/Orange_Fox.tres" id="57_vxuau"]
[ext_resource type="AnimationLibrary" uid="uid://csyrp4opg1g4y" path="res://resource/animation/Ostrich.tres" id="58_85ker"]
[ext_resource type="AnimationLibrary" uid="uid://clbo42riqiu0w" path="res://resource/animation/Paladin.tres" id="59_kvtip"]
[ext_resource type="AnimationLibrary" uid="uid://do42dexu8u0f6" path="res://resource/animation/Panda.tres" id="60_7840x"]
[ext_resource type="AnimationLibrary" uid="uid://db0dswm4pst8o" path="res://resource/animation/Platypus.tres" id="61_h1hj5"]
[ext_resource type="AnimationLibrary" uid="uid://db55pc8rc36" path="res://resource/animation/Polar_Bear.tres" id="62_cw8a3"]
[ext_resource type="AnimationLibrary" uid="uid://fbptx6nj47b6" path="res://resource/animation/Polar_Fox.tres" id="63_tsgvv"]
[ext_resource type="AnimationLibrary" uid="uid://1oci3hj37cmo" path="res://resource/animation/Pumpkin_Horror.tres" id="64_tij7g"]
[ext_resource type="AnimationLibrary" uid="uid://txdyhvfxt52b" path="res://resource/animation/Ranger.tres" id="65_mlobs"]
[ext_resource type="AnimationLibrary" uid="uid://w4jeu8mr6lbu" path="res://resource/animation/Reanimated_Skeleton_Archer.tres" id="66_oo0xa"]
[ext_resource type="AnimationLibrary" uid="uid://ciagckhg06gl0" path="res://resource/animation/Reanimated_Skeleton_Mage.tres" id="67_wgku4"]
[ext_resource type="AnimationLibrary" uid="uid://w56oplr3vw2g" path="res://resource/animation/Reanimated_Skeleton_Warrior.tres" id="68_s0bnt"]
[ext_resource type="AnimationLibrary" uid="uid://b77lfr55ocxbj" path="res://resource/animation/Reanimated_Zombie_Archer.tres" id="69_xjdsd"]
[ext_resource type="AnimationLibrary" uid="uid://c1svnn8wrwy0h" path="res://resource/animation/Reanimated_Zombie_Mage.tres" id="70_uhijy"]
[ext_resource type="AnimationLibrary" uid="uid://bkkvi5sum5j2t" path="res://resource/animation/Reanimated_Zombie_Warrior.tres" id="71_xrcd8"]
[ext_resource type="AnimationLibrary" uid="uid://ddoyr2f6qmmhh" path="res://resource/animation/Rhino.tres" id="72_p7exb"]
[ext_resource type="AnimationLibrary" uid="uid://dpbw8lsgcbhkr" path="res://resource/animation/Rogue.tres" id="73_lmong"]
[ext_resource type="AnimationLibrary" uid="uid://cjae5pmhlcyvj" path="res://resource/animation/Skeletal_Horse.tres" id="74_h3pi1"]
[ext_resource type="AnimationLibrary" uid="uid://35fuje700l5e" path="res://resource/animation/Skeletal_Horse_Rider.tres" id="75_r3iir"]
[ext_resource type="AnimationLibrary" uid="uid://e6n7g6lggppa" path="res://resource/animation/Skeleton.tres" id="76_3e2ub"]
[ext_resource type="AnimationLibrary" uid="uid://cef0b35kkpobg" path="res://resource/animation/Skeleton_Minotaur.tres" id="77_t256i"]
[ext_resource type="AnimationLibrary" uid="uid://bk7eoooiro8lu" path="res://resource/animation/Skunk.tres" id="78_qtfuw"]
[ext_resource type="AnimationLibrary" uid="uid://tukcc57pxe4e" path="res://resource/animation/Snake.tres" id="79_44mhw"]
[ext_resource type="AnimationLibrary" uid="uid://d3rwy242iusjo" path="res://resource/animation/Squirrel.tres" id="80_7yq1n"]
[ext_resource type="AnimationLibrary" uid="uid://d1qdq35stu76f" path="res://resource/animation/Tailor.tres" id="81_wc00o"]
[ext_resource type="AnimationLibrary" uid="uid://buvs4g5wttyoa" path="res://resource/animation/Tiger.tres" id="82_si6ac"]
[ext_resource type="AnimationLibrary" uid="uid://cb1e55waqvdtr" path="res://resource/animation/Tortoise.tres" id="83_gix1v"]
[ext_resource type="AnimationLibrary" uid="uid://3pnt14sfbto8" path="res://resource/animation/Trasgo.tres" id="84_p0unk"]
[ext_resource type="AnimationLibrary" uid="uid://td23v4flppu8" path="res://resource/animation/Troll.tres" id="85_7l1u3"]
[ext_resource type="AnimationLibrary" uid="uid://bethpr616lhaw" path="res://resource/animation/Warg.tres" id="86_m50ti"]
[ext_resource type="AnimationLibrary" uid="uid://ccbd3dl2dqfg6" path="res://resource/animation/Wildfire.tres" id="87_1htnu"]
[ext_resource type="AnimationLibrary" uid="uid://dpxa1wiemh32j" path="res://resource/animation/Wizard.tres" id="88_o5aji"]
[ext_resource type="AnimationLibrary" uid="uid://ca3reysyh0mp5" path="res://resource/animation/Wolf.tres" id="89_nrj28"]
[ext_resource type="AnimationLibrary" uid="uid://tav5tws6fe2a" path="res://resource/animation/Yeti.tres" id="90_gbc6n"]
[ext_resource type="AnimationLibrary" uid="uid://x8lbl6oaxwp8" path="res://resource/animation/Zombie.tres" id="91_1lrjb"]
[ext_resource type="AnimationLibrary" uid="uid://cl0f05lh6e3hw" path="res://resource/animation/Zombie_Bear.tres" id="92_uulne"]
[ext_resource type="AnimationLibrary" uid="uid://goxswdy8bycm" path="res://resource/animation/Zombie_Giant.tres" id="93_4qak4"]
[ext_resource type="AnimationLibrary" uid="uid://d0e6stv0ebk64" path="res://resource/animation/Zombie_Minotaur.tres" id="94_6j1g2"]

[sub_resource type="Animation" id="Animation_ve5jm"]
length = 0.001

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8cpw0"]
_data = {
&"RESET": SubResource("Animation_ve5jm")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_giy1u"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_2pcmc"]
radius = 32.0

[node name="character" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 35
script = ExtResource("1_aakvx")

[node name="fsm" type="Node" parent="."]
script = ExtResource("2_6mb4q")

[node name="idle" type="Node" parent="fsm"]
script = ExtResource("3_k8eue")

[node name="quip_timer" type="Timer" parent="fsm/idle"]
one_shot = true

[node name="move" type="Node" parent="fsm"]
script = ExtResource("4_m366t")

[node name="npc" type="Node" parent="fsm/move" node_paths=PackedStringArray("nav_agent")]
script = ExtResource("4_fi36g")
nav_agent = NodePath("../../../nav_agent")
need_physics_process = true

[node name="player" type="Node" parent="fsm/move"]
script = ExtResource("6_8cpw0")

[node name="dead" type="Node" parent="fsm"]
script = ExtResource("4_tntuy")

[node name="melee" type="Node" parent="fsm" node_paths=PackedStringArray("snd")]
script = ExtResource("5_tntuy")
snd = NodePath("../../snd_melee")

[node name="shoot" type="Node" parent="fsm"]
script = ExtResource("6_56uj1")
enabled = false

[node name="hurt" type="Node" parent="fsm"]
script = ExtResource("10_38jpj")

[node name="fsm_behavior" type="Node" parent="."]
script = ExtResource("2_frm2c")

[node name="rest" type="Node" parent="fsm_behavior"]
script = ExtResource("11_6hfyb")

[node name="attack" type="Node" parent="fsm_behavior" node_paths=PackedStringArray("nav_agent")]
script = ExtResource("12_7l6p6")
nav_agent = NodePath("../../nav_agent")

[node name="shoot_cooldown" type="Timer" parent="fsm_behavior/attack"]
wait_time = 1.5
one_shot = true

[node name="melee_cooldown" type="Timer" parent="fsm_behavior/attack"]
wait_time = 1.5
one_shot = true

[node name="move_to" type="Node" parent="fsm_behavior" node_paths=PackedStringArray("nav_agent")]
script = ExtResource("13_7wjtf")
nav_agent = NodePath("../../nav_agent")

[node name="anim_player" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_8cpw0"),
&"Alchemist": ExtResource("16_0melp"),
&"Badger": ExtResource("17_0ekrb"),
&"Barbarian": ExtResource("18_32hfe"),
&"Bard": ExtResource("19_dmj6x"),
&"Bat": ExtResource("20_wieq1"),
&"Blacksmith": ExtResource("21_0bjdw"),
&"Blue_Mother_Slime": ExtResource("22_x15fd"),
&"Blue_Slime": ExtResource("23_gtk46"),
&"Butcher": ExtResource("24_880r3"),
&"Camel": ExtResource("25_ytjbd"),
&"Carpenter": ExtResource("26_ppwiq"),
&"Cat": ExtResource("27_o072j"),
&"Centaur": ExtResource("28_imcyw"),
&"Cleric": ExtResource("29_fcqus"),
&"Cooker": ExtResource("30_41ik1"),
&"Cyclop": ExtResource("31_vmj8q"),
&"Dog": ExtResource("32_037yu"),
&"Druid": ExtResource("33_pdq4m"),
&"Dyer": ExtResource("34_781ol"),
&"Elephant": ExtResource("35_jbruh"),
&"Evil_Snowman": ExtResource("36_1455u"),
&"Fighter": ExtResource("37_2ko0t"),
&"Frog": ExtResource("38_qkaqj"),
&"Furrier": ExtResource("39_ud4bo"),
&"Ghost": ExtResource("40_10jvr"),
&"GiantSnail": ExtResource("41_dj3ym"),
&"Goat": ExtResource("42_21bgx"),
&"Green_Mother_Slime": ExtResource("43_4ff8c"),
&"Green_Slime": ExtResource("44_cc35g"),
&"Headless_Skeleton": ExtResource("45_oy2vi"),
&"Hedgehog": ExtResource("46_2p33r"),
&"Hippo": ExtResource("47_jyoqh"),
&"Horse": ExtResource("48_bhhjg"),
&"Hyena": ExtResource("49_y05b2"),
&"Jeweller": ExtResource("50_4q184"),
&"Jumping_Skull": ExtResource("51_snbta"),
&"Kangaroo": ExtResource("52_cctdb"),
&"Lion": ExtResource("53_28wxm"),
&"Lioness": ExtResource("54_nykuy"),
&"Minotaur": ExtResource("55_u2trn"),
&"Moose": ExtResource("56_3w2g2"),
&"Orange_Fox": ExtResource("57_vxuau"),
&"Ostrich": ExtResource("58_85ker"),
&"Paladin": ExtResource("59_kvtip"),
&"Panda": ExtResource("60_7840x"),
&"Platypus": ExtResource("61_h1hj5"),
&"Polar_Bear": ExtResource("62_cw8a3"),
&"Polar_Fox": ExtResource("63_tsgvv"),
&"Pumpkin_Horror": ExtResource("64_tij7g"),
&"Ranger": ExtResource("65_mlobs"),
&"Reanimated_Skeleton_Archer": ExtResource("66_oo0xa"),
&"Reanimated_Skeleton_Mage": ExtResource("67_wgku4"),
&"Reanimated_Skeleton_Warrior": ExtResource("68_s0bnt"),
&"Reanimated_Zombie_Archer": ExtResource("69_xjdsd"),
&"Reanimated_Zombie_Mage": ExtResource("70_uhijy"),
&"Reanimated_Zombie_Warrior": ExtResource("71_xrcd8"),
&"Rhino": ExtResource("72_p7exb"),
&"Rogue": ExtResource("73_lmong"),
&"Skeletal_Horse": ExtResource("74_h3pi1"),
&"Skeletal_Horse_Rider": ExtResource("75_r3iir"),
&"Skeleton": ExtResource("76_3e2ub"),
&"Skeleton_Minotaur": ExtResource("77_t256i"),
&"Skunk": ExtResource("78_qtfuw"),
&"Snake": ExtResource("79_44mhw"),
&"Squirrel": ExtResource("80_7yq1n"),
&"Tailor": ExtResource("81_wc00o"),
&"Tiger": ExtResource("82_si6ac"),
&"Tortoise": ExtResource("83_gix1v"),
&"Trasgo": ExtResource("84_p0unk"),
&"Troll": ExtResource("85_7l1u3"),
&"Warg": ExtResource("86_m50ti"),
&"Wildfire": ExtResource("87_1htnu"),
&"Wizard": ExtResource("88_o5aji"),
&"Wolf": ExtResource("89_nrj28"),
&"Yeti": ExtResource("90_gbc6n"),
&"Zombie": ExtResource("91_1lrjb"),
&"Zombie_Bear": ExtResource("92_uulne"),
&"Zombie_Giant": ExtResource("93_4qak4"),
&"Zombie_Minotaur": ExtResource("94_6j1g2")
}

[node name="anim_tree" type="AnimationTree" parent="."]
advance_expression_base_node = NodePath("..")
anim_player = NodePath("../anim_player")

[node name="img" type="Sprite2D" parent="."]
hframes = 16
vframes = 4
frame = 31

[node name="body" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_giy1u")

[node name="snd" type="AudioStreamPlayer2D" parent="."]

[node name="snd_shoot" type="AudioStreamPlayer2D" parent="."]

[node name="snd_melee" type="AudioStreamPlayer2D" parent="."]

[node name="hit_shoot_cast" type="RayCast2D" parent="."]
position = Vector2(0, -1)
target_position = Vector2(32, 0)
collision_mask = 2

[node name="hit_melee_cast" type="RayCast2D" parent="."]
target_position = Vector2(32, 0)
collision_mask = 2

[node name="cam" type="Camera2D" parent="."]
zoom = Vector2(4, 4)

[node name="nav_agent" type="NavigationAgent2D" parent="."]

[node name="sight" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 34
monitorable = false

[node name="coll" type="CollisionShape2D" parent="sight"]
shape = SubResource("CircleShape2D_2pcmc")

[connection signal="timeout" from="fsm/idle/quip_timer" to="fsm/idle" method="_on_quip_timer_timeout"]
[connection signal="timeout" from="fsm_behavior/attack/shoot_cooldown" to="fsm_behavior/attack" method="_on_shoot_cooldown_timeout"]
[connection signal="timeout" from="fsm_behavior/attack/melee_cooldown" to="fsm_behavior/attack" method="_on_melee_cooldown_timeout"]
[connection signal="animation_finished" from="anim_tree" to="fsm/dead" method="_on_animation_tree_animation_finished"]
[connection signal="animation_finished" from="anim_tree" to="fsm/melee" method="_on_animation_tree_animation_finished"]
[connection signal="animation_finished" from="anim_tree" to="fsm/shoot" method="_on_animation_tree_animation_finished"]
[connection signal="animation_finished" from="anim_tree" to="fsm/hurt" method="_on_animation_tree_animation_finished"]
[connection signal="velocity_computed" from="nav_agent" to="." method="_on_nav_velocity_computed"]
[connection signal="area_entered" from="sight" to="." method="_on_sight_area_entered"]
[connection signal="body_entered" from="sight" to="." method="_on_sight_body_entered"]
